Authentication Bloc Done

--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,8 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="passmate">
+  <meta name="apple-mobile-web-app-title" content="PassMate">
+  <meta name="google-signin-client_id" content="389893666974-upcavjn6qlpcpkuk6ckjelfr30ij06cn.apps.googleusercontent.com">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <title>passmate</title>
