LoginBloc Setup Done

--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@
   <meta name="google-signin-client_id" content="389893666974-upcavjn6qlpcpkuk6ckjelfr30ij06cn.apps.googleusercontent.com">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>passmate</title>
+  <title>PassMate</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
