--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,11 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="passmate">
+  <meta name="apple-mobile-web-app-title" content="PassMate">
+  <meta name="google-signin-client_id" content="389893666974-upcavjn6qlpcpkuk6ckjelfr30ij06cn.apps.googleusercontent.com">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>passmate</title>
+  <title>PassMate</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -31,6 +32,7 @@
   <script src="/__/firebase/8.6.8/firebase-analytics.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-storage.js"></script>
   <script>
       var firebaseConfig = {
         apiKey: "AIzaSyA0eMkP80WrurkWlp5BllqvDONXGz4Ac04",
@@ -51,7 +53,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '2889602801';
+    var serviceWorkerVersion = '3137504562';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
